# Tiago_Moveit2_Interface

./: README.md
ros2_ws/install/apriltag/lib/: libapriltag.so.3.4.2
ros2_ws/install/apriltag/share/apriltag/: package.sh
ros2_ws/install/apriltag_msgs/share/apriltag_msgs/: package.sh
ros2_ws/install/apriltag_ros/lib/apriltag_ros/: apriltag_node
ros2_ws/install/apriltag_ros/share/apriltag_ros/: package.sh
ros2_ws/install/clean_the_table/lib/clean_the_table/: drive_to_table  scene_analysis
ros2_ws/install/clean_the_table/share/clean_the_table/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/drive_to_wall/lib/drive_to_wall/: drive_to_wall_action  drive_to_wall_action_client  drive_to_wall_service  drive_to_wall_service_client  drive_to_wall_topic  drive_to_wall_topic_client
ros2_ws/install/drive_to_wall/share/drive_to_wall/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/move_head/lib/move_head/: move_head  move_head_action_server
ros2_ws/install/move_head/share/move_head/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/moveit_wrapper/include/moveit_wrapper/: marker_utils.hpp  moveit_wrapper.hpp
ros2_ws/install/moveit_wrapper/share/moveit_wrapper/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/moveit_wrapper/share/moveit_wrapper/launch/: moveit_wrapper.launch.py
ros2_ws/install/moveit_wrapper/share/moveit_wrapper/params/: tiago.yaml
ros2_ws/install/moveit_wrapper_interfaces/share/moveit_wrapper_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/moveit_wrapper_test/lib/moveit_wrapper_test/: test_collision_in_position  test_collision_objects  test_pick_place
ros2_ws/install/moveit_wrapper_test/share/moveit_wrapper_test/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
ros2_ws/install/my_nav2/lib/my_nav2/: my_node
ros2_ws/install/my_nav2/share/my_nav2/: package.sh  package.xml  package.zsh
ros2_ws/install/my_package/share/my_package/: package.xml
ros2_ws/install/py_srvcli/share/py_srvcli/: package.sh
ros2_ws/install/tf_test/lib/tf_test/: tf_test
ros2_ws/install/tf_test/share/tf_test/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/install/tiago_inspection/lib/tiago_inspection/: start_inspection
ros2_ws/install/tiago_inspection/share/tiago_inspection/: package.dsv  package.sh
ros2_ws/install/wall_stop/share/wall_stop/: package.bash  package.dsv  package.sh  package.zsh
ros2_ws/install/wrapper_collision_marker/lib/wrapper_collision_marker/: wrapper_marker
ros2_ws/install/wrapper_collision_marker/share/wrapper_collision_marker/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.zsh
ros2_ws/log/: latest_build
ros2_ws/src/25ws_nb-246830/: .gitmodules
ros2_ws/src/25ws_nb-246830/config/: moveit2.rviz  tags_36h11.yaml
ros2_ws/src/25ws_nb-246830/config/rviz/: tiago.rviz
ros2_ws/src/25ws_nb-246830/docker/: .compose_templates.yml  Dockerfile_Workspace  moveit_demo.yml  ros2-apriltag.yml  tiago3.yml  tiago_inspection.yml  tiago_moveit.yml  tiago_moveit2.yml  tiago_slam.yml  tiago_workspace.yml
ros2_ws/src/25ws_nb-246830/maps/: myfirstmap.pgm
ros2_ws/src/25ws_nb-246830/models/: spawn_objects_clean_table.py  spawn_objects_single.py
ros2_ws/src/25ws_nb-246830/stage_1/: laser-testdata_1  laser-testdata_2  main.py  main_class.py
ros2_ws/src/25ws_nb-246830/stage_2/my_package/: setup.py
ros2_ws/src/25ws_nb-246830/stage_2/py_pubsub/: package.xml  setup.py
ros2_ws/src/25ws_nb-246830/stage_3/docker/: .compose_templates.yml  Dockerfile_Workspace  compose-tiago-demo.yml  tiago_nav.yml  tiago_sim.yml
ros2_ws/src/25ws_nb-246830/stage_3/install/: local_setup.sh  setup.sh
ros2_ws/src/25ws_nb-246830/stage_3/log/: latest_build
ros2_ws/src/25ws_nb-246830/stage_3/maps/: myfirstmap.pgm  myfirstmap.yaml
ros2_ws/src/25ws_nb-246830/stage_3/my_nav2/: setup.py
ros2_ws/src/25ws_nb-246830/stage_3/py_srvcli/: package.xml  setup.py
ros2_ws/src/25ws_nb-246830/stage_3/tiago_inspection/: package.xml  setup.cfg  setup.py
ros2_ws/src/25ws_nb-246830/stage_3/wall_stop/: setup.cfg  setup.py
ros2_ws/src/25ws_nb-246830/stage_4/custom_interfaces/: CMakeLists.txt
ros2_ws/src/25ws_nb-246830/stage_4/drive_to_wall/: setup.py
ros2_ws/src/25ws_nb-246830/stage_5/move_head/: CMakeLists.txt  package.xml  setup.cfg  setup.py
ros2_ws/src/25ws_nb-246830/stage_6/: test.py
ros2_ws/src/25ws_nb-246830/submodules/moveit_wrapper/moveit_wrapper/: CMakeLists.txt
ros2_ws/src/25ws_nb-246830/submodules/moveit_wrapper/moveit_wrapper/params/: moveit_wrapper.yaml
ros2_ws/src/25ws_nb-246830/submodules/moveit_wrapper/moveit_wrapper/src/: moveit_wrapper.cpp
ros2_ws/src/25ws_nb-246830/submodules/moveit_wrapper/moveit_wrapper/src/services/: add_collision_object.cpp  attach_object.cpp  detach_object.cpp  execute_plans.cpp  get_attached_objects.cpp  get_collision_objects.cpp  get_named_target.cpp  get_named_targets.cpp  goto_named_target.cpp  move_torso.cpp  plan.cpp  plan_joints.cpp  remove_collision_object.cpp
ros2_ws/src/25ws_nb-246830/submodules/moveit_wrapper/moveit_wrapper_interfaces/: CMakeLists.txt
ros2_ws/src/25ws_nb-246830/submodules/moveit_wrapper/moveit_wrapper_interfaces/msg/: WaypointSequence.msg
ros2_ws/src/25ws_nb-246830/submodules/moveit_wrapper/moveit_wrapper_interfaces/srv/: AddColObj.srv  DettachObj.srv  GetAttachedObjs.srv  GetColObj.srv  GetNamedTarget.srv  GetNamedTargets.srv  MoveTorso.srv  Plan.srv  PlanJoints.srv  RemoveColObj.srv
(+471 files in other folders)
